# edictum-console

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BOOTSTRAP.md  CLAUDE.md  CONSOLE-FEATURES.md  CONTEXT.md  CONVENTIONS.md  DASHBOARD.md  DEV-NOTES.md  Dockerfile  LICENSE  LICENSE.md  Multi-BundleDataModel.md  Multi-BundleSDK.md  NOTICE  PLAN.md  PROMPT-BACKEND-CLEANUP.md  PROMPT-BUILD-VIEW6-MOCKUPS.md  PROMPT-CONTRACTS-CONTINUE.md  PROMPT-CONTRACTS-P1-BACKEND.md  PROMPT-CONTRACTS-P2-FOUNDATION.md  PROMPT-CONTRACTS-P3-TAB1.md  PROMPT-CONTRACTS-P4-TAB2.md  PROMPT-CONTRACTS-P5-TAB3.md  PROMPT-CONTRACTS-P6-TAB4.md  PROMPT-DESIGN-REMAINING-VIEWS.md  PROMPT-DESIGN-VIEWS-7-8.md  PROMPT-DISCORD-INTERACTIVE.md  PROMPT-FINAL-POLISH.md  PROMPT-FRONTEND-AUDIT.md  PROMPT-IMPLEMENT-VIEWS.md  PROMPT-MULTI-BUNDLE-P1-MODEL.md  PROMPT-MULTI-BUNDLE-P2-ROUTES.md  PROMPT-MULTI-BUNDLE-P2B-FIXUP.md  PROMPT-MULTI-BUNDLE-P3-PUSH.md  PROMPT-MULTI-BUNDLE-P4-FRONTEND.md  PROMPT-MULTI-BUNDLE-P5-SDK.md  PROMPT-MULTI-BUNDLE.md  (+14 more)
.github/: review-instructions.md  review-template.md
alembic/: env.py
audits/: AUDIT-1-BACKEND-SECURITY.md  AUDIT-2-TENANT-ISOLATION-REDTEAM.md  AUDIT-3-LIVE-PENTEST.md  AUDIT-4-DEPENDENCIES.md  AUDIT-5-FRONTEND.md  AUDIT-6-CODE-QUALITY.md  AUDIT-7-INFRASTRUCTURE.md  AUDIT-MASTER.md  Dockerfile.audit  run-audits.sh
dashboard/: SPEC-CONTRACTS-VIEW.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
deploy/: docker-compose.yml
docker/: postgres-init.sh
docs/: openapi.json
scripts/: check-terminology.py  generate-openapi.py  refresh_approvals.py  (+3 more)
(+476 files in other folders)
